--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-html{
-  background-color: whitesmoke;
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap');
 
 body {
   margin: 0;
@@ -9,10 +7,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #343434;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
