added react-toastify, and created t success, error and loading message with it

--- a/src/user/signin/signin.styles.scss
+++ b/src/user/signin/signin.styles.scss
@@ -1,3 +1,19 @@
+.successMessage{
+    color: #000000;
+    background-color: #ffffff;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.errorMessage{
+    color: red;
+    background-color: #ffffff;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
 .title {
     margin-top: 2rem;
 }
