--- a/src/core/collection-item/collection-item.styles.scss
+++ b/src/core/collection-item/collection-item.styles.scss
@@ -1,3 +1,14 @@
+.signin-modal{
+  background-color: rgba(255,255, 255, 0.8);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .collection-item {
     width: 22vw;
     display: flex;
